--- a/src/assets/styls.css
+++ b/src/assets/styls.css
@@ -1,13 +1,11 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #24303c;
-    color: white;
-    font-family: 'calibri';
+body {
+  background-color: #24303c;
+  color: white;
+  font-family: "calibri";
 }
-
-
